# inviterr

backend/: pyproject.toml  run.py
backend/app/: env.py  main.py  resources.py
backend/app/controllers/: __init__.py  admin.py  invite.py  sessions.py  setup.py  user.py
backend/app/helpers/: guards.py  invite.py  jwt.py  misc.py  user.py
backend/app/models/: platform.py  roles.py  session.py  setup.py  user.py
backend/app/models/invite/: internal.py
backend/app/services/platform/: base.py  emby.py  jellyfin.py  plex.py
backend/app/services/request/: base.py
backend/inviterr/: env.py  guards.py  invite.py  main.py  resources.py
backend/inviterr/controllers/: __init__.py  invite.py  user.py
backend/inviterr/helpers/: user.py
backend/inviterr/models/: onboarding.py  platform.py  user.py
backend/inviterr/models/invite/: __init__.py  internal.py  permssions.py  redeem.py
backend/inviterr/onboarding/: README  README.md
backend/inviterr/services/platform/: base.py  emby.py  jellyfin.py  plex.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: Loading.svelte  SelectTheme.svelte  SetTitle.svelte  serialize.ts  stores.ts
frontend/src/lib/api/: index.ts  v1.d.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/setup/: +page.svelte
inviterr/: package-lock.json  package.json
inviterr/src/: app.d.ts  hooks.server.ts
inviterr/src/lib/: SelectTheme.svelte  SetTitle.svelte  stores.ts
inviterr/src/lib/forms/: setup.ts
inviterr/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
inviterr/src/routes/setup/: +layout.server.ts  +page.server.ts  +page.svelte
inviterr/src/routes/setup/instances/: +page.svelte
inviterr/src/routes/setup/theme/: +page.svelte
